--- a/index.html
+++ b/index.html
@@ -43,8 +43,37 @@
             padding: 0;
             margin: 0;
         }
+
+        /* Pop-up style */
+        .popup-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
+        }
+
+        .popup-content {
+            background-color: white;
+            padding: 20px;
+            border-radius: 5px;
+            text-align: center;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        .popup-content button {
+            margin-top: 10px;
+            padding: 5px 10px;
+            font-size: 14px;
+            background-color: #a81931;
+            cursor: pointer;
+        }
         </style>
-        <title></title>
     </head>
     <body>
         <div id="map">
@@ -53,6 +82,25 @@
                 <div id="popup-content"></div>
             </div>
         </div>
+        <div id="popup-overlay" class="popup-overlay" style="display: none;">
+            <div class="popup-content">
+                <p>本網站是國立成功大學113-1學年度「史學研究的數位工具」課程作業成果</p>
+                <p>本圖資料出自於：吳銅編，《臺灣醫師名鑑》，臺中市 : 台灣醫藥新聞社，1954</p>
+                <p>此為作業成果，數據有待進一步處理，請勿徵引</p>
+                <button onclick="closePopup()">了解</button>
+            </div>
+        </div>
+        <script>
+            // Show the popup when the page loads
+            document.addEventListener("DOMContentLoaded", function () {
+                document.getElementById("popup-overlay").style.display = "flex";
+            });
+
+            // Close the popup
+            function closePopup() {
+                document.getElementById("popup-overlay").style.display = "none";
+            }
+        </script>
         <script src="resources/qgis2web_expressions.js"></script>
         <script src="./resources/functions.js"></script>
         <script src="./resources/ol.js"></script>
